--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,18 @@ body{
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.loggo-container {
-  margin-bottom: 40px;
+.logo-container {
+  margin: 0 auto 30px;
 }
 
 .logo {
   height: 6em;
-  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  width: 100%;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -38,9 +37,38 @@ h1{
   margin-bottom: 12px;
 }
 
+@media (max-width: 600px) {
+  h1 {
+    font-size: 32px;
+  }
+  body{
+    display: flex;
+    place-items: start;
+    background-size: 90%;
+  }
+  .logo-container {
+    max-width: 220px;
+    padding-top: 90px;
+  }
+}
+
 p{
   font-size: 18px;
   color: #FFF;
+  margin-bottom: 40px;
+}
+
+.footer{
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  right: 0;
+  margin: 0 auto;
+}
+.footer p{
+  font-size: 16px;
+  color: #FFF;
+  margin: 20px;
 }
 
 @keyframes logo-spin {
